--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -5,7 +5,7 @@
         <script src="{{ url_for('static', filename='script.js')}}"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary hideable">
         <div class="container-fluid">
             <a class="navbar-brand" href="home">Dossier City System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +68,7 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Criminal</a>
             </div>
         </div>
-        <form class="d-flex" method="get" role="search">
+        <form class="d-flex hideable" method="get" role="search">
             <div class="input-group mb-3">
                 <select class="input-group-text" id="column" name="column">
                     <option value="c_id">C_ID</option>
