--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -380,12 +380,49 @@
                                     <iframe id="sentencesEmbed" height="500"></iframe>
                                 </div>
                             </div>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addAliasModal">Add Alias</a>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
                         <input type="submit" class="btn btn-primary" value="Edit Criminal" onclick="javascript: form.action='/edit-criminal'; form.method='post'">
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <!-- add alias modal -->
+          <div class="modal fade" id="addAliasModal" tabindex="-1" aria-labelledby="addAliasLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" style="min-width: 90%;">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="addAliasLabel">Add Alias</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form method="post">
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="alias">Alias</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="alias" id="alias" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="a_id">Alias ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="a_id" id="a_id" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <input type="submit" class="btn btn-primary" value="Add Alias" onclick="javascript: form.action='/add-alias'; form.method='post'">
                     </div>
                 </form>
               </div>
