--- a/templates/home.html
+++ b/templates/home.html
@@ -4,14 +4,45 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="home">Dossier City System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="crimes">Crimes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="criminals">Criminals</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="probation_officers">Probation Officers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="officers">Officers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="appeals">Appeals</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="charges">Charges</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item me-auto">
+                    <a class="nav-link active" aria-current="page" href="/">Logout</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+        </nav>
+        <a class="nav-link active" aria-current="page" href="crimes">Crimes</a>
                     <a class="nav-link active" aria-current="page" href="criminals">Criminals</a>
                     <a class="nav-link active" aria-current="page" href="probation_officers">Probation Officers</a>
                     <a class="nav-link active" aria-current="page" href="officers">Officers</a>
@@ -19,34 +50,6 @@
                     <a class="nav-link active" aria-current="page" href="charges">Charges</a>
                     <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
 <a class="nav-link active" aria-current="page" href="/">Logout</a>
-            </div>
-        </div>
-        </nav>
-        <h1>Home</h1>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="crimes">Crimes</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="criminals">Criminals</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="probation_officers">Probation Officers</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="officers">Officers</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="appeals">Appeals</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="charges">Charges</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Logout</a>
-        </li>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
