better login page error management

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,24 @@
             </div>
         </nav>
         {% with errors = get_flashed_messages(category_filter=["error"]) %}
-                {% if errors %}
-                {%- for msg in errors %}
+        {% if errors %}
+        <div class="alert alert-danger" role="alert">
+            Errors:
+            {%- for msg in errors %}
                 <li>{{ msg }}</li>
-                {% endfor -%}
-                {% endif %}
-                {% endwith %}
+            {% endfor -%}
+        </div>
+        {% endif %}
+        {% endwith %}
+        {% with successes = get_flashed_messages(category_filter=["success"]) %}
+        {% if successes %}
+        <div class="alert alert-success" role="alert">
+            {%- for msg in successes %}
+                <li>{{ msg }}</li>
+            {% endfor -%}
+        </div>
+        {% endif %}
+        {% endwith %}
         <div class="container">
             <div class="row align-items-start">
                 <div class="col me-auto">
