--- a/templates/home.html
+++ b/templates/home.html
@@ -42,14 +42,16 @@
             </div>
         </div>
         </nav>
-        <a class="nav-link active" aria-current="page" href="crimes">Crimes</a>
-                    <a class="nav-link active" aria-current="page" href="criminals">Criminals</a>
-                    <a class="nav-link active" aria-current="page" href="probation_officers">Probation Officers</a>
-                    <a class="nav-link active" aria-current="page" href="officers">Officers</a>
-                    <a class="nav-link active" aria-current="page" href="appeals">Appeals</a>
-                    <a class="nav-link active" aria-current="page" href="charges">Charges</a>
-                    <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
-<a class="nav-link active" aria-current="page" href="/">Logout</a>
+        <div class="d-flex justify-content-between">
+            <a class="btn btn-primary p-2" aria-current="page" href="crimes">Crimes</a>
+            <a class="btn btn-primary p-2" aria-current="page" href="criminals">Criminals</a>
+            <a class="btn btn-primary p-2" aria-current="page" href="probation_officers">Probation Officers</a>
+            <a class="btn btn-primary p-2" aria-current="page" href="officers">Officers</a>
+            <a class="btn btn-primary p-2" aria-current="page" href="appeals">Appeals</a>
+            <a class="btn btn-primary p-2" aria-current="page" href="charges">Charges</a>
+            <a class="btn btn-primary p-2" aria-current="page" href="sentences">Sentences</a>
+            <a class="btn btn-danger" aria-current="page" href="/">Logout</a>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
