fix weird bug with a input

--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -351,7 +351,7 @@
                             </button>
                             <div class="collapse" id="aliasList">
                                 <div class="card card-body">
-                                    <form method="post">
+                                    <!-- <form method="post"> -->
                                         <table class="table table-striped table-hover">
                                             <thead>
                                                 <tr>
@@ -363,8 +363,8 @@
             
                                             </tbody>
                                         </table>
-                                        <input type="submit" class="btn btn-danger" value="Delete Aliases" onclick="javascript: form.action='/delete-aliases'; form.method='post'">
-                                    </form>
+                                        <!-- <input type="submit" class="btn btn-danger" value="Delete Aliases" onclick="javascript: form.action='/delete-aliases'; form.method='post'">
+                                    </form> -->
                                 </div>
                             </div>
                             <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#crimesCommitted" aria-expanded="false" aria-controls="crimesCommitted">
