remove leftover things

--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -355,7 +355,7 @@
                                         <table class="table table-striped table-hover">
                                             <thead>
                                                 <tr>
-                                                    <th></th>
+                                                    <!-- <th></th> -->
                                                     <th>Alias</th>
                                                 </tr>
                                             </thead>
@@ -484,7 +484,7 @@
                     checkbox.name = "check"+alias["alias_id"]
                     checkbox.value = ""
                     checkbox_ctr.appendChild(checkbox);
-                    row.appendChild(checkbox_ctr);
+                    // row.appendChild(checkbox_ctr);
                     row.appendChild(col);
                     col.innerText = alias["alias"];
                     list_body.append(row);
